--- a/EventsView.html
+++ b/EventsView.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title> Mutarjimoon :: Events </title>
+	<title> Mutarjimoon :: EventsView </title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -42,7 +42,7 @@
 
 <!--	<link rel="stylesheet" href="assets/fonts_Ar/stylesheet.css" type="text/css" media="all">-->
 <!--	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all">-->
-<!--	-->
+
 </head>
 
 <body>
@@ -247,12 +247,12 @@
 			<div class="col-lg-12 text-center">
 				<div class="breadcumb-content">
 					<div class="breadcumb-title">
-						<h1>All Events</h1>
+						<h1>Dubai is shaping the future of AI.</h1>
 						<p>We offer a wide range of insightful guides and e-books that pave the way for individuals and businesses to success.</p>
 					</div>
 					<ul class="mt-4">
 						<li><a href="index.html"><i class="bi bi-house-door-fill"></i> Home </a></li>
-						<li class="rotates"><i class="bi bi-slash-lg"></i> Events </li>
+						<li class="rotates"><i class="bi bi-slash-lg"></i> Dubai is shaping the future of AI. </li>
 					</ul>
 				</div>
 			</div>
@@ -262,169 +262,45 @@
 
 <section class="service_area style_two style_three inner_page pb-0 pt-5">
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="block_item_event">
-					<div class="row">
-						<div class="col-md-4 col-lg-4">
-							<div class="slider_event">
-								<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-									<div class="carousel-indicators">
-										<button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-										<button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1" aria-label="Slide 2"></button>
-										<button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2" aria-label="Slide 3"></button>
-									</div>
-									<div class="carousel-inner">
-										<div class="carousel-item active">
-											<a href="#"><img src="assets/images/blog_1.png" class="d-block w-100" alt="..."> </a>
-										</div>
-										<div class="carousel-item">
-											<a href="#"><img src="assets/images/blog_2.png" class="d-block w-100" alt="..."> </a>
-										</div>
-										<div class="carousel-item">
-											<a href="#"><img src="assets/images/blog_3.png" class="d-block w-100" alt="..."> </a>
-										</div>
-									</div>
-								</div>
+		<div class="row rtl">
+
+			<div class="col-md-8 col-lg-8 col-12 rtl">
+				<div class="img_main_event">
+					<img src="assets/images/ev.jpg" alt="" title="">
+				</div>
+				<div class="desc_main_event">
+					<h3>Highlights and recommendations of Dubai AI Week 2025</h3>
+					<p>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week, organized by the Dubai Center for AI (DCAI), part of the Dubai Future Foundation. The event attracted more than 30,000 participants from 100 countries, including experts, innovators, and representatives of major global technology companies such as Microsoft, Google, Meta, OpenAI, and NVIDIA.</p>
+					<p>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week, organized by the Dubai Center for AI (DCAI), part of the Dubai Future Foundation. The event attracted more than 30,000 participants from 100 countries, including experts, innovators, and representatives of major global technology companies such as Microsoft, Google, Meta, OpenAI, and NVIDIA.</p>
+					<ul>
+						<li>Highlights and recommendations of Dubai AI Week 2025</li>
+						<li>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week</li>
+						<li>organized by the Dubai Center for AI</li>
+						<li>Highlights and recommendations of Dubai AI Week 2025</li>
+						<li>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week</li>
+						<li>organized by the Dubai Center for AI</li>
+					</ul>
+					<p>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week, organized by the Dubai Center for AI (DCAI), part of the Dubai Future Foundation. The event attracted more than 30,000 participants from 100 countries, including experts, innovators, and representatives of major global technology companies such as Microsoft, Google, Meta, OpenAI, and NVIDIA.</p>
+				</div>
+			</div>
+			<div class="col-md-4 col-lg-4 col-12">
+				<div class="position-relative">
+					<div class="sidebar_box_event">
+						<h2 class="sidebar_title">Event Mutarjimoon?</h2>
+						<div class="sidebar_icon_box">
+							<div class="sidebar_text">
+								<p>  We provide you with integrated translation services, helping you achieve your goals and satisfy your businesses needs.  </p>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-6">
-							<div class="desc_event">
-								<h3> <a href="#"> Dubai is shaping the future of AI. </a></h3>
-								<p>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week, organized by the Dubai Center for AI (DCAI), part of the Dubai Future Foundation. The event attracted more than 30,000 participants from 100 countries, including experts, innovators, and representatives of major global technology companies such as Microsoft, Google, Meta, OpenAI, and NVIDIA.</p>
-							</div>
-						</div>
-						<div class="col-md-2 col-lg-2 order--oneEvent">
-							<div class="date_event">
-								<i class="fa fa-calendar"></i> AUG <b> 30 </b> 2025
-							</div>
+						<div class="header-button header-button-whats style_two w-100">
+							<a href="#" class="d-block mt-3 text-center">Contact Us <i class="bi bi-arrow-right"></i></a>
+							<a href="https://wa.me/+201065962515" target="_blank" class="d-block mt-3 text-center btn_whatsapp">Whatsapp <i class="bi bi-whatsapp"></i></a>
+							<a href="#" class="d-block mt-3 text-center">Call Now <i class="bi bi-headphones"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-12">
-				<div class="block_item_event">
-					<div class="row">
-						<div class="col-md-4 col-lg-4">
-							<div class="slider_event">
-								<div id="carouselExampleAutoplaying2" class="carousel slide" data-bs-ride="carousel">
-									<div class="carousel-indicators">
-										<button type="button" data-bs-target="#carouselExampleAutoplaying2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-										<button type="button" data-bs-target="#carouselExampleAutoplaying2" data-bs-slide-to="1" aria-label="Slide 2"></button>
-										<button type="button" data-bs-target="#carouselExampleAutoplaying2" data-bs-slide-to="2" aria-label="Slide 3"></button>
-									</div>
-									<div class="carousel-inner">
-										<div class="carousel-item active">
-											<a href="#"><img src="assets/images/blog_1.png" class="d-block w-100" alt="..."> </a>
-										</div>
-										<div class="carousel-item">
-											<a href="#"><img src="assets/images/blog_2.png" class="d-block w-100" alt="..."> </a>
-										</div>
-										<div class="carousel-item">
-											<a href="#"><img src="assets/images/blog_3.png" class="d-block w-100" alt="..."> </a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-6">
-							<div class="desc_event">
-								<h3> <a href="#"> Dubai is shaping the future of AI. </a></h3>
-								<p>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week, organized by the Dubai Center for AI (DCAI), part of the Dubai Future Foundation. The event attracted more than 30,000 participants from 100 countries, including experts, innovators, and representatives of major global technology companies such as Microsoft, Google, Meta, OpenAI, and NVIDIA.</p>
-							</div>
-						</div>
-						<div class="col-md-2 col-lg-2 order--oneEvent">
-							<div class="date_event">
-								<i class="fa fa-calendar"></i> AUG <b> 30 </b> 2025
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-12">
-				<div class="block_item_event">
-					<div class="row">
-						<div class="col-md-4 col-lg-4">
-							<div class="slider_event">
-								<div id="carouselExampleAutoplaying3" class="carousel slide" data-bs-ride="carousel">
-									<div class="carousel-indicators">
-										<button type="button" data-bs-target="#carouselExampleAutoplaying3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-										<button type="button" data-bs-target="#carouselExampleAutoplaying3" data-bs-slide-to="1" aria-label="Slide 2"></button>
-										<button type="button" data-bs-target="#carouselExampleAutoplaying3" data-bs-slide-to="2" aria-label="Slide 3"></button>
-									</div>
-									<div class="carousel-inner">
-										<div class="carousel-item active">
-											<a href="#"><img src="assets/images/blog_1.png" class="d-block w-100" alt="..."> </a>
-										</div>
-										<div class="carousel-item">
-											<a href="#"><img src="assets/images/blog_2.png" class="d-block w-100" alt="..."> </a>
-										</div>
-										<div class="carousel-item">
-											<a href="#"><img src="assets/images/blog_3.png" class="d-block w-100" alt="..."> </a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-6">
-							<div class="desc_event">
-								<h3> <a href="#"> Dubai is shaping the future of AI. </a></h3>
-								<p>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week, organized by the Dubai Center for AI (DCAI), part of the Dubai Future Foundation. The event attracted more than 30,000 participants from 100 countries, including experts, innovators, and representatives of major global technology companies such as Microsoft, Google, Meta, OpenAI, and NVIDIA.</p>
-							</div>
-						</div>
-						<div class="col-md-2 col-lg-2 order--oneEvent">
-							<div class="date_event">
-								<i class="fa fa-calendar"></i> AUG <b> 30 </b> 2025
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-12">
-				<div class="block_item_event">
-					<div class="row">
-						<div class="col-md-4 col-lg-4">
-							<div class="slider_event">
-								<div id="carouselExampleAutoplaying4" class="carousel slide" data-bs-ride="carousel">
-									<div class="carousel-indicators">
-										<button type="button" data-bs-target="#carouselExampleAutoplaying4" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-										<button type="button" data-bs-target="#carouselExampleAutoplaying4" data-bs-slide-to="1" aria-label="Slide 2"></button>
-										<button type="button" data-bs-target="#carouselExampleAutoplaying4" data-bs-slide-to="2" aria-label="Slide 3"></button>
-									</div>
-									<div class="carousel-inner">
-										<div class="carousel-item active">
-											<a href="#"><img src="assets/images/blog_1.png" class="d-block w-100" alt="..."> </a>
-										</div>
-										<div class="carousel-item">
-											<a href="#"><img src="assets/images/blog_2.png" class="d-block w-100" alt="..."> </a>
-										</div>
-										<div class="carousel-item">
-											<a href="#"><img src="assets/images/blog_3.png" class="d-block w-100" alt="..."> </a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-6">
-							<div class="desc_event">
-								<h3> <a href="#"> Dubai is shaping the future of AI. </a></h3>
-								<p>In April 2025, Dubai hosted the first edition of Dubai Artificial Intelligence Week, organized by the Dubai Center for AI (DCAI), part of the Dubai Future Foundation. The event attracted more than 30,000 participants from 100 countries, including experts, innovators, and representatives of major global technology companies such as Microsoft, Google, Meta, OpenAI, and NVIDIA.</p>
-							</div>
-						</div>
-						<div class="col-md-2 col-lg-2 order--oneEvent">
-							<div class="date_event">
-								<i class="fa fa-calendar"></i> AUG <b> 30 </b> 2025
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="service_shape_three style_four rotate">
-			<img src="assets/images/main-home/service_shpe2.png" alt="">
-		</div>
-		<div class="service_shape_five bounce-animate2">
-			<img src="assets/images/main-home/choose_rotete.png" alt="">
+
 		</div>
 	</div>
 </section>
