--- a/Magazine_test_2.html
+++ b/Magazine_test_2.html
@@ -392,6 +392,62 @@
                                         превращая самые обыкновенные вещи в нечто экстраординарное. <br />
                                         Сказки про волшебство помогают детям самостоятельно наполнять смыслом окружающий мир, <br />
                                         стремиться к созиданию и ценить прекрасное.
+										 Волшебные сказки помогут вам и вашим детям погрузиться в мир чудес и невероятных приключений. <br />
+                                        Они способствуют развитию детского воображения, потому что рисуют в нем самые невообразимые картины. <br />
+                                        Увлекательные сюжеты будут интересны детям любого возраста, и помогут погрузиться в красочные сновидения. <br />
+                                        Волшебная сказка не просто интересна <br />
+                                        – она наполняет жизнь ребенка яркими красками, <br />
+                                        превращая самые обыкновенные вещи в нечто экстраординарное. <br />
+                                        Сказки про волшебство помогают детям самостоятельно наполнять смыслом окружающий мир, <br />
+                                        стремиться к созиданию и ценить прекрасное.
+										 Волшебные сказки помогут вам и вашим детям погрузиться в мир чудес и невероятных приключений. <br />
+                                        Они способствуют развитию детского воображения, потому что рисуют в нем самые невообразимые картины. <br />
+                                        Увлекательные сюжеты будут интересны детям любого возраста, и помогут погрузиться в красочные сновидения. <br />
+                                        Волшебная сказка не просто интересна <br />
+                                        – она наполняет жизнь ребенка яркими красками, <br />
+                                        превращая самые обыкновенные вещи в нечто экстраординарное. <br />
+                                        Сказки про волшебство помогают детям самостоятельно наполнять смыслом окружающий мир, <br />
+                                        стремиться к созиданию и ценить прекрасное.
+										 Волшебные сказки помогут вам и вашим детям погрузиться в мир чудес и невероятных приключений. <br />
+                                        Они способствуют развитию детского воображения, потому что рисуют в нем самые невообразимые картины. <br />
+                                        Увлекательные сюжеты будут интересны детям любого возраста, и помогут погрузиться в красочные сновидения. <br />
+                                        Волшебная сказка не просто интересна <br />
+                                        – она наполняет жизнь ребенка яркими красками, <br />
+                                        превращая самые обыкновенные вещи в нечто экстраординарное. <br />
+                                        Сказки про волшебство помогают детям самостоятельно наполнять смыслом окружающий мир, <br />
+                                        стремиться к созиданию и ценить прекрасное.
+										 Волшебные сказки помогут вам и вашим детям погрузиться в мир чудес и невероятных приключений. <br />
+                                        Они способствуют развитию детского воображения, потому что рисуют в нем самые невообразимые картины. <br />
+                                        Увлекательные сюжеты будут интересны детям любого возраста, и помогут погрузиться в красочные сновидения. <br />
+                                        Волшебная сказка не просто интересна <br />
+                                        – она наполняет жизнь ребенка яркими красками, <br />
+                                        превращая самые обыкновенные вещи в нечто экстраординарное. <br />
+                                        Сказки про волшебство помогают детям самостоятельно наполнять смыслом окружающий мир, <br />
+                                        стремиться к созиданию и ценить прекрасное.
+										 Волшебные сказки помогут вам и вашим детям погрузиться в мир чудес и невероятных приключений. <br />
+                                        Они способствуют развитию детского воображения, потому что рисуют в нем самые невообразимые картины. <br />
+                                        Увлекательные сюжеты будут интересны детям любого возраста, и помогут погрузиться в красочные сновидения. <br />
+                                        Волшебная сказка не просто интересна <br />
+                                        – она наполняет жизнь ребенка яркими красками, <br />
+                                        превращая самые обыкновенные вещи в нечто экстраординарное. <br />
+                                        Сказки про волшебство помогают детям самостоятельно наполнять смыслом окружающий мир, <br />
+                                        стремиться к созиданию и ценить прекрасное.
+										 Волшебные сказки помогут вам и вашим детям погрузиться в мир чудес и невероятных приключений. <br />
+                                        Они способствуют развитию детского воображения, потому что рисуют в нем самые невообразимые картины. <br />
+                                        Увлекательные сюжеты будут интересны детям любого возраста, и помогут погрузиться в красочные сновидения. <br />
+                                        Волшебная сказка не просто интересна <br />
+                                        – она наполняет жизнь ребенка яркими красками, <br />
+                                        превращая самые обыкновенные вещи в нечто экстраординарное. <br />
+                                        Сказки про волшебство помогают детям самостоятельно наполнять смыслом окружающий мир, <br />
+                                        стремиться к созиданию и ценить прекрасное.
+										 Волшебные сказки помогут вам и вашим детям погрузиться в мир чудес и невероятных приключений. <br />
+                                        Они способствуют развитию детского воображения, потому что рисуют в нем самые невообразимые картины. <br />
+                                        Увлекательные сюжеты будут интересны детям любого возраста, и помогут погрузиться в красочные сновидения. <br />
+                                        Волшебная сказка не просто интересна <br />
+                                        – она наполняет жизнь ребенка яркими красками, <br />
+                                        превращая самые обыкновенные вещи в нечто экстраординарное. <br />
+                                        Сказки про волшебство помогают детям самостоятельно наполнять смыслом окружающий мир, <br />
+                                        стремиться к созиданию и ценить прекрасное.
                                     </div>
                                     <div class="page-footer">1</div>
                                 </div>
