--- a/Magazine.html
+++ b/Magazine.html
@@ -249,10 +249,6 @@
 					<div class="breadcumb-title">
 						<h1>All Magazines</h1>
 						<p>We offer a wide range of insightful guides and e-books that pave the way for individuals and businesses to success.</p>
-						<form class="search_blog position-relative">
-							<input type="search" class="form-control position-relative" placeholder="Search in our events">
-							<i class="fa fa-search"></i>
-						</form>
 					</div>
 					<ul class="mt-4">
 						<li><a href="index.html"><i class="bi bi-house-door-fill"></i> Home </a></li>
@@ -264,89 +260,103 @@
 	</div>
 </div>
 
-<section class="service_area style_two style_three inner_page pb-0">
+<section class="service_area style_two style_three inner_page py-5">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-4">
-				<!-- feature item -->
-				<div class="service_single_item style_two style_three">
-					<div class="service_thumb">
-						<img src="assets/images/blog_3.png" alt="">
-						<div class="service_icon">
-							<a href="#"><img src="assets/images/tap.svg" alt="" class="w-25"></a>
+			<div class="col-md-6 col-lg-6 col-12">
+				<div class="book-item">
+					<div class="bk-img">
+						<div class="bk-wrapper">
+							<div class="bk-book bk-bookdefault">
+								<div class="bk-front">
+									<div class="bk-cover" style="background-image: url('assets/images/m-1.jpg')"></div>
+								</div>
+								<div class="bk-back"></div>
+								<div class="bk-left"></div>
+							</div>
 						</div>
 					</div>
-					<div class="service_content">
+					<div class="item-details">
+						<h3 class="book-item_title">Mutarjimoon Magazine</h3>
+						<p class="author">by Admin. AUG &bull; 2025</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
 						<div class="header-button style_two">
-							<a href="#" class="py-2 mb-2 rounded-2">Get It Now</a>
+							<a href="#"> Details <i class="bi bi-arrow-right"></i></a>
 						</div>
-						<h3 class="h-auto mb-2"><a href="#" class="fs-5">Sustainability Consulting for Business Planning</a></h3>
 					</div>
-					<div class="meta-blog d-flex justify-content-center gap-4 mb-0">
-						<p class="mb-0"> <i class="fa fa-user"></i> By Admin </p>
-						<p class="mb-0"> <i class="fa fa-calendar"></i> 20 Jan, 2024</p>
-					</div>
-
 				</div>
 			</div>
-			<div class="col-lg-4">
-				<!-- feature item -->
-				<div class="service_single_item style_two style_three">
-					<div class="service_thumb">
-						<img src="assets/images/blog_3.png" alt="">
-						<div class="service_icon">
-							<a href="#"><img src="assets/images/tap.svg" alt="" class="w-25"></a>
+			<div class="col-md-6 col-lg-6 col-12">
+				<div class="book-item">
+					<div class="bk-img">
+						<div class="bk-wrapper">
+							<div class="bk-book bk-bookdefault">
+								<div class="bk-front">
+									<div class="bk-cover" style="background-image: url('assets/images/m-2.jpg')"></div>
+								</div>
+								<div class="bk-back"></div>
+								<div class="bk-left"></div>
+							</div>
 						</div>
 					</div>
-					<div class="service_content">
+					<div class="item-details">
+						<h3 class="book-item_title">Mutarjimoon Magazine</h3>
+						<p class="author">by Admin. AUG &bull; 2025</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
 						<div class="header-button style_two">
-							<a href="#" class="py-2 mb-2 rounded-2">Get It Now</a>
+							<a href="#"> Details <i class="bi bi-arrow-right"></i></a>
 						</div>
-						<h3 class="h-auto mb-2"><a href="#" class="fs-5">Sustainability Consulting for Business Planning</a></h3>
 					</div>
-					<div class="meta-blog d-flex justify-content-center gap-4 mb-0">
-						<p class="mb-0"> <i class="fa fa-user"></i> By Admin </p>
-						<p class="mb-0"> <i class="fa fa-calendar"></i> 20 Jan, 2024</p>
-					</div>
-
 				</div>
 			</div>
-			<div class="col-lg-4">
-				<!-- feature item -->
-				<div class="service_single_item style_two style_three">
-					<div class="service_thumb">
-						<img src="assets/images/blog_3.png" alt="">
-						<div class="service_icon">
-							<a href="#"><img src="assets/images/tap.svg" alt="" class="w-25"></a>
+			<div class="col-md-6 col-lg-6 col-12">
+				<div class="book-item">
+					<div class="bk-img">
+						<div class="bk-wrapper">
+							<div class="bk-book bk-bookdefault">
+								<div class="bk-front">
+									<div class="bk-cover" style="background-image: url('assets/images/m-3.jpg')"></div>
+								</div>
+								<div class="bk-back"></div>
+								<div class="bk-left"></div>
+							</div>
 						</div>
 					</div>
-					<div class="service_content">
+					<div class="item-details">
+						<h3 class="book-item_title">Mutarjimoon Magazine</h3>
+						<p class="author">by Admin. AUG &bull; 2025</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
 						<div class="header-button style_two">
-							<a href="#" class="py-2 mb-2 rounded-2">Get It Now</a>
+							<a href="#"> Details <i class="bi bi-arrow-right"></i></a>
 						</div>
-						<h3 class="h-auto mb-2"><a href="#" class="fs-5">Sustainability Consulting for Business Planning</a></h3>
 					</div>
-					<div class="meta-blog d-flex justify-content-center gap-4 mb-0">
-						<p class="mb-0"> <i class="fa fa-user"></i> By Admin </p>
-						<p class="mb-0"> <i class="fa fa-calendar"></i> 20 Jan, 2024</p>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-6 col-12">
+				<div class="book-item">
+					<div class="bk-img">
+						<div class="bk-wrapper">
+							<div class="bk-book bk-bookdefault">
+								<div class="bk-front">
+									<div class="bk-cover" style="background-image: url('assets/images/m-4.jpg')"></div>
+								</div>
+								<div class="bk-back"></div>
+								<div class="bk-left"></div>
+							</div>
+						</div>
 					</div>
-
+					<div class="item-details">
+						<h3 class="book-item_title">Mutarjimoon Magazine</h3>
+						<p class="author">by Admin. AUG &bull; 2025</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
+						<div class="header-button style_two">
+							<a href="#"> Details <i class="bi bi-arrow-right"></i></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="text-center">
-				<nav aria-label="Page navigation example">
-					<ul class="pagination mt-5 mb-3">
-						<li class="page-item"><a class="page-link" href="#">Previous</a></li>
-						<li class="page-item"><a class="page-link" href="#">1</a></li>
-						<li class="page-item"><a class="page-link" href="#">2</a></li>
-						<li class="page-item"><a class="page-link" href="#">3</a></li>
-						<li class="page-item"><a class="page-link" href="#">Next</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
+
 	</div>
 	<div class="service_shape_three style_four rotate">
 		<img src="assets/images/main-home/service_shpe2.png" alt="">
@@ -358,92 +368,7 @@
 </section>
 
 
-<section class="contact_area inner_section">
-	<div class="container">
-		<div class="row align-items-center">
-			<div class="col-lg-6">
-				<!-- contact form box -->
-				<div class="contact-form-box style_two">
-					<!-- section title -->
-					<div class="section_title style_three style_four text-center ">
-						<h4>CONTACT US</h4>
-						<h1>Get In Touch with Mutarjimoon</h1>
-					</div>
-					<form action="#" method="POST">
-						<div class="row">
-							<div class="col-lg-12 col-md-12">
-								<div class="form-box">
-									<input type="text" name="name" placeholder="Full Name">
-								</div>
-							</div>
-							<div class="col-lg-12 col-md-12">
-								<div class="form-box">
-									<input type="email" name="name" placeholder="E-Mail">
-								</div>
-							</div>
-							<div class="col-lg-12 col-md-12">
-								<div class="form-box">
-									<input type="text" name="name" placeholder="Phone No">
-								</div>
-							</div>
 
-							<div class="col-lg-12 col-md-12">
-								<div class="form-box message">
-									<textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
-								</div>
-							</div>
-							<div class="contact-form">
-								<button type="submit"> Send <i class="far fa-envelope ms-2"></i>  </button>
-							</div>
-						</div>
-					</form>
-					<div id="status"></div>
-				</div>
-			</div>
-			<div class="col-lg-6">
-				<div class="section_title">
-					<h4>Contact US</h4>
-					<h3>Unmatched Quality </h3>
-					<p> Our experts in language and marketing solutions committing to strict QA standards ensure high professionalism and creativity.  </p>
-				</div>
-				<div class="contact_main_info">
-					<div class="call-do-action-info">
-						<div class="call-do-social_icon">
-							<i class="fas fa-phone-alt"></i>
-						</div>
-						<div class="call_info">
-							<p>Phone:</p>
-							<h3>+201000322295</h3>
-						</div>
-					</div>
-					<div class="call-do-action-info">
-						<div class="call-do-social_icon">
-							<i class="fas fa-envelope-open"></i>
-						</div>
-						<div class="call_info">
-							<p> Email: </p>
-							<h3> info@mutrjimoon.com</h3>
-						</div>
-					</div>
-					<div class="call-do-action-info">
-						<div class="call-do-social_icon">
-							<i class="fas fa-map-marker-alt"></i>
-						</div>
-						<div class="call_info">
-							<p> Address: </p>
-							<h3> 42 Fariq Awal Ali Amer Street, 6th District, Nasr City, Cairo </h3>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-	</div>
-
-	<div class="contact_shape2 dance2 d-none d-md-block">
-		<img src="assets/images/main-home/service_shpe2.png" alt="">
-	</div>
-</section>
 
 
 
