--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,18 @@
  </div>
 
 
+<!-- Modal -->
 
+<div class="cookies-box rtl">
+	<h3 class="cookies__title">Cookies help you have a better online experience. </h3>
+	<p class="cookies__text">
+		We utilize technologies like cookies to store or retrieve data on your device in order to give you the best possible user experience. By using these technologies, you give us permission to process information about your browsing habits and unique identifiers on this website. Certain services and functionalities may be adversely affected by nonconsent.
+	</p>
+	<div class="cookies__buttons">
+		<button id="acceptBtn" class="cookies__btn cookies__btn--accept"> That’s Okay </button>
+		<button class="cookies__btn cookies__btn--decline"> No, thank you </button>
+	</div>
+</div>
 
 	
 	<!-- jquery js -->
