--- a/MagazineView.html
+++ b/MagazineView.html
@@ -256,41 +256,28 @@
 		<div id="htmlBook">
 			<div class="flip-book html-book stf__wrapper --landscape" id="htmlBookExample" style="min-width: 350px; min-height: 467px; width: 100%; max-width: 1400px; display: block; padding-bottom: 66.6364%;">
 				<div class="stf__block">
-					<div class="page stf__item" style="display: none; z-index: 1;">
+					<div class="page stf__item">
 						<div class="page-content">
 							<div class="page-image" style="background-image: url(assets/images/ma-1.jpg);"></div>
 							<div class="page-footer">1</div>
 						</div>
 					</div>
-					<div class="page stf__item" style="display: none; z-index: 1;">
+					<div class="page stf__item">
 						<div class="page-content">
 							<div class="page-image" style="background-image: url(assets/images/ma-2.jpg);"></div>
 							<div class="page-footer">2</div>
 						</div>
 					</div>
-					<div class="page stf__item --left --simple" style="display: none;">
+					<div class="page stf__item">
 						<div class="page-content">
-							<h2 class="page-header">Маша и медведь.3</h2>
 							<div class="page-image" style="background-image: url(assets/images/ma-3.jpg);"></div>
 							<div class="page-footer">3</div>
 						</div>
 					</div>
-					<div class="page stf__item --right --simple" style="display: none;">
+					<div class="page stf__item">
 						<div class="page-content">
 							<div class="page-image" style="background-image: url(assets/images/ma-4.jpg);"></div>
 							<div class="page-footer">4</div>
-						</div>
-					</div>
-					<div class="page stf__item" style="position: absolute; left: 0px; top: 0px; box-sizing: border-box; display: none; z-index: 1;">
-						<div class="page-content">
-							<div class="page-image" style="background-image: url(assets/images/ma-5.jpg);"></div>
-							<div class="page-footer">5</div>
-						</div>
-					</div>
-					<div class="page stf__item" style="position: absolute; left: 0px; top: 0px; box-sizing: border-box; display: none; z-index: 1;">
-						<div class="page-content">
-							<div class="page-image" style="background-image: url(assets/images/ma-6.jpg);"></div>
-							<div class="page-footer">6</div>
 						</div>
 					</div>
 				</div>
