--- a/MagazineView.html
+++ b/MagazineView.html
@@ -300,6 +300,168 @@
 	</div>
 </div>
 
+
+<section class="contact_area inner_section">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-lg-12">
+				<!-- contact form box -->
+				<div class="contact-form-box style_two">
+					<!-- section title -->
+					<div class="section_title style_three style_four text-center ">
+						<h4>Download PDF</h4>
+						<h1>Get In Touch with Mutarjimoon</h1>
+					</div>
+					<form action="#" method="POST">
+						<div class="row">
+							<div class="col-lg-4 col-md-4">
+								<div class="form-box">
+									<input type="text" name="name" placeholder="Full Name">
+								</div>
+							</div>
+							<div class="col-lg-4 col-md-4">
+								<div class="form-box">
+									<input type="email" name="name" placeholder="E-Mail">
+								</div>
+							</div>
+							<div class="col-lg-4 col-md-4">
+								<div class="form-box">
+									<input type="text" name="name" placeholder="Phone No">
+								</div>
+							</div>
+							<div class="col-lg-12 col-md-12">
+							<div class="contact-form w-100">
+								<button type="submit" class="w-100"> Send <i class="far fa-envelope ms-2"></i>  </button>
+							</div>
+							</div>
+						</div>
+					</form>
+					<div id="status"></div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="contact_shape2 dance2 d-none d-md-block">
+		<img src="assets/images/main-home/service_shpe2.png" alt="">
+	</div>
+</section>
+
+
+<section class="service_area related_magazine style_two style_three inner_page py-5">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 col-lg-12 col-12">
+				<div class="section_title style_three style_four text-center ">
+					<h1>Related Magazine</h1>
+					<p class="w-100"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-6 col-12">
+				<div class="book-item">
+					<div class="bk-img">
+						<div class="bk-wrapper">
+							<div class="bk-book bk-bookdefault">
+								<div class="bk-front">
+									<div class="bk-cover" style="background-image: url('assets/images/m-1.jpg')"></div>
+								</div>
+								<div class="bk-back"></div>
+								<div class="bk-left"></div>
+							</div>
+						</div>
+					</div>
+					<div class="item-details">
+						<h3 class="book-item_title">Mutarjimoon Magazine</h3>
+						<p class="author">by Admin. AUG &bull; 2025</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
+						<div class="header-button style_two">
+							<a href="#"> Details <i class="bi bi-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-6 col-12">
+				<div class="book-item">
+					<div class="bk-img">
+						<div class="bk-wrapper">
+							<div class="bk-book bk-bookdefault">
+								<div class="bk-front">
+									<div class="bk-cover" style="background-image: url('assets/images/m-2.jpg')"></div>
+								</div>
+								<div class="bk-back"></div>
+								<div class="bk-left"></div>
+							</div>
+						</div>
+					</div>
+					<div class="item-details">
+						<h3 class="book-item_title">Mutarjimoon Magazine</h3>
+						<p class="author">by Admin. AUG &bull; 2025</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
+						<div class="header-button style_two">
+							<a href="#"> Details <i class="bi bi-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-6 col-12">
+				<div class="book-item">
+					<div class="bk-img">
+						<div class="bk-wrapper">
+							<div class="bk-book bk-bookdefault">
+								<div class="bk-front">
+									<div class="bk-cover" style="background-image: url('assets/images/m-3.jpg')"></div>
+								</div>
+								<div class="bk-back"></div>
+								<div class="bk-left"></div>
+							</div>
+						</div>
+					</div>
+					<div class="item-details">
+						<h3 class="book-item_title">Mutarjimoon Magazine</h3>
+						<p class="author">by Admin. AUG &bull; 2025</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
+						<div class="header-button style_two">
+							<a href="#"> Details <i class="bi bi-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-6 col-12">
+				<div class="book-item">
+					<div class="bk-img">
+						<div class="bk-wrapper">
+							<div class="bk-book bk-bookdefault">
+								<div class="bk-front">
+									<div class="bk-cover" style="background-image: url('assets/images/m-4.jpg')"></div>
+								</div>
+								<div class="bk-back"></div>
+								<div class="bk-left"></div>
+							</div>
+						</div>
+					</div>
+					<div class="item-details">
+						<h3 class="book-item_title">Mutarjimoon Magazine</h3>
+						<p class="author">by Admin. AUG &bull; 2025</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus nisi, eget pulvinar in, molestie et arcu.</p>
+						<div class="header-button style_two">
+							<a href="#"> Details <i class="bi bi-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<div class="service_shape_three style_four rotate">
+		<img src="assets/images/main-home/service_shpe2.png" alt="">
+	</div>
+	<div class="service_shape_five bounce-animate2">
+		<img src="assets/images/main-home/choose_rotete.png" alt="">
+	</div>
+
+</section>
+
 <footer>
 	<section class="call_area style_three">
 		<div class="container">
